Import of bazel plugin using copybara
PiperOrigin-RevId: 195698937